...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:id="@+id/textViewVideoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadlineSmall"
                tools:text="Video Title Goes Here and Can Be Quite Long Indeed" />

            <LinearLayout
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_vertical">
                <Button
                    android:id="@+id/buttonPlay"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/play_video"
                    app:icon="@drawable/ic_play_arrow" />
...
