<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/title_explore" />
    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_save"
        android:title="@string/title_saved" />
    <!--
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
    -->
</menu>
